Add explicit reference to System.Formats.Asn1 to address Microsoft Security Advisory CVE-2024-38095

--- a/src/Core/Core.csproj
+++ b/src/Core/Core.csproj
@@ -34,6 +34,8 @@
     <PackageReference Include="Fido2.AspNet" Version="3.0.1" />
     <PackageReference Include="Handlebars.Net" Version="2.1.6" />
     <PackageReference Include="MailKit" Version="4.7.0" />
+    <!-- Explicit reference to System.Formats.Asn1 to address Microsoft Security Advisory CVE-2024-38095 -->
+    <PackageReference Include="System.Formats.Asn1" Version="8.0.1" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.7" />
     <PackageReference Include="Microsoft.Azure.Cosmos" Version="3.39.1" />
     <PackageReference Include="Microsoft.Azure.NotificationHubs" Version="4.2.0" />
